# dotfiles

./: .gitignore  .gitmodules  .stow-global-ignore  README.md  flake.nix  treefmt.toml
X11/: .xinitrc
atom/.atom/: config.cson  keymap.cson  packages.list
bash/: .bash_profile  .bashrc
clojure/.lein/: profiles.clj
git/: .gitconfig  .gitignore
idea/: .ideavimrc
kde/.config/: kdeglobals  kglobalshortcutsrc  khotkeysrc
nix/: .stow-local-ignore  sshPublicKeys.nix
nix-channels/nix-channels/: nixpkgs  unstable
nix/modules/: anki-bin.nix  anki.nix  archivebox.nix  emby-server.nix  frigate.nix  gdrive-sync.nix  immich-camera-sync.nix  moixa.nix  neovim.nix  sabnzbd.nix  secrets.nix  sunshine.nix  taffybar-my.nix  tailscale-drive.nix  tailscale-funnel.nix  tuigreet.nix  vimrc
nix/nixos/: base-configuration.nix  flake.nix  udev.nix
nix/overlays/: anki.nix  aoe2de.nix  asciichart.nix  default.nix  emby-server.nix  ferdi.nix  immich-upload-google-takeout.nix  nix-npm-install.nix  polar-bookshelf.nix  rscls.nix  scripts.nix  systemd-services.nix  tmate.nix  virtualbox.nix
nix/overlays/taffybar/: default.nix  taffybar-my.cabal  taffybar.hs
nix/secrets/: dawarich_db_pass.age  deluge_remote_device.age  deluge_ssh_config.age  immich_api_key.age  pushover_api_key.age  pushover_user.age  putio_api_key.age  putioarr_pass.age  radarr_api_key.age  sabnzbd_api_key.age  sabnzbd_blocknews_pass.age  sabnzbd_blocknews_user.age  secrets.nix  (+5 more)
nixos/: base-configuration.nix  configuration.nix
spacemacs/: .spacemacs
tmate/: .tmate.conf
vim/: .vimrc
xmonad/: .xsession
(+113 files in other folders)
