name:                taffybar-my
version:             0.1.0.0
author:              author
maintainer:          email@email.com
build-type:          Simple
cabal-version:       >=1.10

executable taffybar-my
  hs-source-dirs:      .
  main-is:             taffybar.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , gtk3
                     , hslogger
                     , process
                     , split
                     , taffybar
                     , transformers
                     , xdg-basedir
                     , X11>=1.8
  default-language:    Haskell2010
